rimosso salvataggio indici

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -494,12 +494,12 @@
         "df3.hist(\"Account_length\", bins=75, figsize=(20,20))"
       ],
       "metadata": {
-        "id": "SnQmRN22Vg6b",
-        "outputId": "e2aee1da-d83e-4f35-f5bb-66238844a3ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "SnQmRN22Vg6b",
+        "outputId": "e2aee1da-d83e-4f35-f5bb-66238844a3ec"
       },
       "id": "SnQmRN22Vg6b",
       "execution_count": 55,
@@ -546,11 +546,11 @@
         "np.unique(df3[\"Account_length\"], return_counts=True)"
       ],
       "metadata": {
-        "id": "cw7WuTAnV5-H",
-        "outputId": "2424e022-6935-431f-8ba3-db9003c5a069",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cw7WuTAnV5-H",
+        "outputId": "2424e022-6935-431f-8ba3-db9003c5a069"
       },
       "id": "cw7WuTAnV5-H",
       "execution_count": 56,
@@ -573,7 +573,7 @@
       "source": [
         "from google.colab import files\n",
         "\n",
-        "df3.to_csv('processed.csv', encoding = 'utf-8-sig') \n",
+        "df3.to_csv('processed.csv', encoding = 'utf-8-sig', index=False) \n",
         "files.download('processed.csv')"
       ],
       "metadata": {
@@ -582,10 +582,10 @@
           "height": 17
         },
         "id": "Ngg8MFNMTVT9",
-        "outputId": "2daed261-24a0-4d97-f149-260be2e5fbe5"
+        "outputId": "d2e9d12a-b406-403a-fc0c-c52056284c6d"
       },
       "id": "Ngg8MFNMTVT9",
-      "execution_count": 57,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -646,7 +646,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_0fe5efed-ccf8-4c6d-a596-6ca5f4bba2c4\", \"processed.csv\", 809061)"
+              "download(\"download_a01ce237-c117-4599-8e8c-c77780c56327\", \"processed.csv\", 761625)"
             ]
           },
           "metadata": {}
