--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -16,7 +16,7 @@
     ]
    },
    "source": "import pandas as pd\nimport numpy as np\n\nurl = \"data/clean_data.csv\"\ndf = pd.read_csv(url)\n\ndf.head()\n\"\"\"\nda eliminare: ID, work_phone, phone, email, years_employed, occupation_type, housing_type, Num_children\nok: gendro, unemploued, account_length, age, income_type, education_type, family status\nda tenere: own_car, own_property,\tNum_family, total_income, target\n\"\"\"\n",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -43,13 +43,10 @@
     "execution_start": 1648492582023,
     "execution_millis": 81,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 518,
-    "deepnote_output_heights": [
-     177
-    ]
+    "deepnote_cell_height": 520
    },
    "source": "df2 = df.drop([\"ID\", \"Work_phone\", \"Phone\", \"Email\", \"Years_employed\", \"Occupation_type\", \"Housing_type\", \"Num_children\"], axis=1)\n\ndf2[\"Age\"] = df2[\"Age\"].apply(np.floor)\ndf2[\"Age\"] = df2[\"Age\"].astype(np.int8)\n\ndf2.head()\n",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -782,7 +779,7 @@
     "deepnote_cell_height": 343.5
    },
    "source": "print(pd.unique(df2[\"Num_family\"]))\nprint(pd.unique(df2[\"Account_length\"]))\nprint(pd.unique(df2[\"Education_type\"]))\nprint(pd.unique(df2[\"Income_type\"]))\nprint(pd.unique(df2[\"Family_status\"]))\n",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
@@ -804,7 +801,7 @@
     "deepnote_cell_height": 171
    },
    "source": "def discretize_num(x):\n    if x >=thresh:\n      return str(thresh) + \"+\"\n    else:\n      return str(x)\n",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -823,7 +820,7 @@
     ]
    },
    "source": "thresh = 4\ndf3[\"Num_family\"] = df2[\"Num_family\"].apply(discretize_num)\n\nnp.unique(df3[\"Num_family\"], return_counts=True)\n",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -850,14 +847,14 @@
     "execution_start": 1648492609774,
     "execution_millis": 2244,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 470,
+    "deepnote_cell_height": 451.1875,
     "deepnote_output_heights": [
-     21,
+     21.1875,
      266
     ]
    },
    "source": "np.unique(df3[\"Age\"], return_counts=True)\ndf2.hist(\"Age\", bins=100)\n# >30, 30-39, 40-49, 50-59, >=60",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -903,7 +900,7 @@
     ]
    },
    "source": "def discretize_age(x):\n  if x<30:\n    return \"<30\"\n  elif x<40:\n    return \"30-39\"\n  elif x<50:\n    return \"40-49\"\n  elif x<60:\n    return \"50-59\"\n  else:\n    return \"60>=\"  \n\ndf3[\"Age\"] = df2[\"Age\"].apply(discretize_age)\nnp.unique(df3[\"Age\"], return_counts=True)\n",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -930,14 +927,14 @@
     "execution_start": 1648492619968,
     "execution_millis": 526,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 755,
+    "deepnote_cell_height": 755.1875,
     "deepnote_output_heights": [
-     21,
+     21.1875,
      606
     ]
    },
    "source": "df3.hist(\"Total_income\", bins=75, figsize=(10,10))",
-   "execution_count": 10,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -964,6 +961,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": "Discretization of totali income has been performed considering and equi-frequency kind of splitting",
+   "metadata": {
+    "cell_id": "798a5472cd4849a5bbdc58daea2a570c",
+    "tags": [],
+    "deepnote_cell_type": "markdown",
+    "deepnote_cell_height": 104.390625
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "colab": {
@@ -983,7 +990,7 @@
     ]
    },
    "source": "#df3.hist(\"Total_income\", bins=75, figsize=(10,10))\n#134997 - > 192600\ndef discretize_income(x):\n  if x < 134997:\n    return \"low\"\n  elif x < 192600:\n    return \"medium\"\n  else:\n    return \"high\"\n\ndf3[\"Total_income\"] = df2[\"Total_income\"].apply(discretize_income)\nnp.unique(df3[\"Total_income\"], return_counts=True)\n",
-   "execution_count": 11,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1010,14 +1017,14 @@
     "execution_start": 1648492629472,
     "execution_millis": 692,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 760,
+    "deepnote_cell_height": 760.1875,
     "deepnote_output_heights": [
-     21,
+     21.1875,
      611
     ]
    },
    "source": "df3.hist(\"Account_length\", bins=75, figsize=(20,20))",
-   "execution_count": 12,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1063,7 +1070,7 @@
     ]
    },
    "source": "def discretize_al(x):\n  if x < 12:\n    return \"<1y\"\n  elif x < 24:\n    return \"1y-2y\"\n  elif x<36:\n    return \"2y-3y\"\n  else:\n    return \"3y+\"\n\ndf3[\"Account_length\"] = df2[\"Account_length\"].apply(discretize_al)\nnp.unique(df3[\"Account_length\"], return_counts=True)",
-   "execution_count": 13,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -1090,14 +1097,10 @@
     "execution_start": 1648492638430,
     "execution_millis": 63,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 132,
-    "deepnote_output_heights": [
-     2,
-     2
-    ]
+    "deepnote_cell_height": 81
    },
    "source": "df3.to_csv('data/processed.csv', encoding = 'utf-8-sig', index=False) ",
-   "execution_count": 14,
+   "execution_count": null,
    "outputs": []
   },
   {
