--- a/bayes_net.ipynb
+++ b/bayes_net.ipynb
@@ -619,8 +619,7 @@
    "source": "",
    "metadata": {
     "cell_id": "22b00a8daf29481db13cf5ca5bbe4beb",
-    "deepnote_cell_type": "visualization",
-    "deepnote_cell_height": 54
+    "deepnote_cell_type": "visualization"
    },
    "execution_count": null,
    "outputs": []
@@ -767,7 +766,11 @@
     "execution_start": 1648492940905,
     "execution_millis": 2303,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 755.375
+    "deepnote_cell_height": 755.375,
+    "deepnote_output_heights": [
+     null,
+     304
+    ]
    },
    "source": "hillclimbmodel_improved = hillclimbest.estimate(scoring_method=bic_score, fixed_edges=[\n    (\"Total_income\", \"Target\"), \n    (\"Income_type\", \"Total_income\"),\n    (\"Total_income\", \"Own_property\"),\n    (\"Total_income\", \"Own_car\"),\n    (\"Income_type\", \"Unemployed\"),\n    (\"Age\", \"Total_income\"),\n    (\"Age\", \"Income_type\"),\n    (\"Age\", \"Account_length\"),\n    (\"Income_type\", \"Total_income\"),\n    (\"Income_type\", \"Unemployed\"),\n    (\"Education_type\", \"Unemployed\"),\n    (\"Education_type\", \"Income_type\"),\n    (\"Family_status\", \"Num_family\")])#, black_list=[(\"Own_car\",\"Gender\"), (\"Gender\", \"Own_car\")])\nnx.draw(hillclimbmodel_improved, with_labels=True)\n\nprint(bic_score.score(hillclimbmodel_improved))",
    "execution_count": null,
@@ -943,7 +946,10 @@
     "deepnote_table_loading": false,
     "deepnote_table_invalid": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 1508
+    "deepnote_cell_height": 1508,
+    "deepnote_output_heights": [
+     380
+    ]
    },
    "source": "from pgmpy.estimators.CITests import chi_square\n\nordered_list_of_attr = [\"Gender\", \"Age\", \"Family_status\", \"Num_family\", \n                        \"Education_type\", \"Income_type\", \"Unemployed\", \n                        \"Total_income\", \"Own_property\", \"Own_car\", \"Account_length\", \"Target\"]\ncol_names = df.columns \n\np_values = np.zeros((len(col_names), len(col_names)))\nfor first_index, first_col_val in enumerate(col_names): \n    for second_index, second_col_val in enumerate(col_names):\n        if first_index != second_index:\n            (chi, p_value, dof) = chi_square(first_col_val, second_col_val, [], df, False)\n            p_values[first_index, second_index] = p_value \n\ndisplay(pd.DataFrame(p_values, columns=col_names, index=col_names)>0.01)\ncorr = pd.DataFrame(p_values, columns=col_names, index=col_names)\n# maggiore = accettiamo = True = Indipendenti\nfor i in range(len(ordered_list_of_attr)):\n    c = ordered_list_of_attr[i]\n    for j in range(i+1, len(ordered_list_of_attr)):\n        r = ordered_list_of_attr[j]    \n        if corr[c][r]<0.01:\n            print([c , \"->\",r])",
    "execution_count": null,
@@ -981,7 +987,7 @@
     "deepnote_table_loading": false,
     "deepnote_table_invalid": false,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 697
+    "deepnote_cell_height": 699
    },
    "source": "display(pd.DataFrame(p_values, columns=col_names, index=col_names).apply(np.log))",
    "execution_count": null,
@@ -1942,7 +1948,11 @@
     "execution_start": 1648837356765,
     "execution_millis": 580,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 586.375
+    "deepnote_cell_height": 586.375,
+    "deepnote_output_heights": [
+     null,
+     193.875
+    ]
    },
    "source": "for el in [\"Num_family\", \"Education_type\", \"Income_type\", \"Unemployed\", \"Total_income\", \"Own_property\", \"Account_length\", \"Target\"]:\n    (chi, p_value, dof) = chi_square(\"Family_status\",el , [\"Gender\", \"Age\"], df, False)\n    print(p_value)\n\n[\"Age\", \"Family_status\", \"Num_family\", \"Education_type\", \"Income_type\", \"Unemployed\", \"Total_income\", \"Own_property\", \"Account_length\", \"Target\"]\n\n# ammaccabanane",
    "execution_count": null,
@@ -1967,8 +1977,7 @@
    "source": "",
    "metadata": {
     "cell_id": "f7b3c079f2cf407da9f2e71b9d1b273a",
-    "deepnote_cell_type": "visualization",
-    "deepnote_cell_height": 54
+    "deepnote_cell_type": "visualization"
    },
    "execution_count": null,
    "outputs": []
@@ -1998,6 +2007,7 @@
     "source_hash": "ec328804",
     "execution_start": 1649000472610,
     "execution_millis": 843,
+    "owner_user_id": "14885735-5940-40fe-a39a-7ab7fac88e2b",
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 234.1875
    },
@@ -2071,7 +2081,10 @@
     "execution_start": 1648831420489,
     "execution_millis": 806,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 743
+    "deepnote_cell_height": 743,
+    "deepnote_output_heights": [
+     304
+    ]
    },
    "source": "\npos={\"Gender\":(3,5),\n\"Age\":(1,5),\n\"Total_income\":(3,3),\n\"Income_type\":(2.5,4),\n\"Education_type\":(2,5),\n\"Num_family\":(1,3),\n\"Account_length\":(0.5,1),\n\"Own_property\":(1,2),\n\"Unemployed\":(2.5,3.5),\n\"Own_car\":(2,3),\n\"Family_status\":(1,4),\n\"Target\":(1.5,0),}\n\nnx.draw(hand_net, pos=pos, with_labels=True)\n#per ora sto solo mettendo i nomi delle colonne, poi sistemiamo\n# sarebbe da fissare la posizione dei nodi\n#gender, Age, Family_status, num_family, Education_type, Income_type, Unemployed, Total_income, Own_property, Own_car, Account_length, target\n#nx.draw(X, pos)\n#plt.show()",
    "execution_count": null,
@@ -2101,7 +2114,7 @@
     "execution_start": 1648831404005,
     "execution_millis": 2,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 702.5
+    "deepnote_cell_height": 706.5
    },
    "source": "def show_active_trail(net, node_name):\n    print(f\"The nodes in an active trail that are connected to {node_name} are:\")\n    to_print = list(net.active_trail_nodes(node_name).values())\n    print(to_print)\n\nfor elem in df.columns:\n    show_active_trail(hand_net, elem)\n#eh ma anche io sto bestemmiando per disporre il grafo come si deve",
    "execution_count": null,
@@ -2122,8 +2135,12 @@
     "source_hash": "bd2ddf10",
     "execution_start": 1648831579975,
     "execution_millis": 619,
+    "owner_user_id": "d3c0040e-1334-4d1d-af60-5a227b82581a",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 581
+    "deepnote_cell_height": 581,
+    "deepnote_output_heights": [
+     304
+    ]
    },
    "source": "def draw_markov_blanket(net, node_name):\n    filtered_nodes = hand_net.get_markov_blanket(node_name)\n    filtered_nodes.append(node_name)\n    filtered_edges = [(e1, e2) for (e1, e2) in hand_net.edges() if (e1 in filtered_nodes) and (e2 in filtered_nodes)]\n\n    markov_blanket = DAG()\n    markov_blanket.add_nodes_from(nodes=filtered_nodes)\n    markov_blanket.add_edges_from(ebunch=filtered_edges)\n    nx.draw_planar(markov_blanket, width=2, with_labels=True)\n\ndraw_markov_blanket(hand_net, \"Target\")",
    "execution_count": null,
