--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -6,21 +6,22 @@
     "id": "0GTH_trA8TTS",
     "cell_id": "ae1b82a4-c736-421a-a142-4fd89f59ed96",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "7a99c05e",
-    "execution_start": 1648492579722,
-    "execution_millis": 49,
+    "source_hash": "f22f4031",
+    "execution_start": 1649435049779,
+    "execution_millis": 37,
+    "owner_user_id": "d3c0040e-1334-4d1d-af60-5a227b82581a",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 334.1875,
+    "deepnote_cell_height": 352.1875,
     "deepnote_output_heights": [
      21.1875
     ]
    },
-   "source": "import pandas as pd\nimport numpy as np\n\nurl = \"data/clean_data.csv\"\ndf = pd.read_csv(url)\n\ndf.head()\n\"\"\"\nda eliminare: ID, work_phone, phone, email, years_employed, occupation_type, housing_type, Num_children\nok: gendro, unemploued, account_length, age, income_type, education_type, family status\nda tenere: own_car, own_property,\tNum_family, total_income, target\n\"\"\"\n",
-   "execution_count": null,
+   "source": "import pandas as pd\nimport numpy as np\n\nurl = \"data/clean_data.csv\"\ndf = pd.read_csv(url)\n\ndf.head()\n\n\"\"\"\nda eliminare: ID, work_phone, phone, email, years_employed, occupation_type, housing_type, Num_children\nok: gendro, unemploued, account_length, age, income_type, education_type, family status\nda tenere: own_car, own_property,\tNum_family, total_income, target\n\"\"\"\n",
+   "execution_count": 17,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 1,
+     "execution_count": 17,
      "data": {
       "text/plain": "'\\nda eliminare: ID, work_phone, phone, email, years_employed, occupation_type, housing_type, Num_children\\nok: gendro, unemploued, account_length, age, income_type, education_type, family status\\nda tenere: own_car, own_property,\\tNum_family, total_income, target\\n'"
      },
@@ -40,17 +41,17 @@
     "cell_id": "00001-d3e56bbb-0896-4f34-a69a-54f32f43897c",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "6ba0ddf1",
-    "execution_start": 1648492582023,
-    "execution_millis": 81,
+    "execution_start": 1649435055247,
+    "execution_millis": 65,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 520
    },
    "source": "df2 = df.drop([\"ID\", \"Work_phone\", \"Phone\", \"Email\", \"Years_employed\", \"Occupation_type\", \"Housing_type\", \"Num_children\"], axis=1)\n\ndf2[\"Age\"] = df2[\"Age\"].apply(np.floor)\ndf2[\"Age\"] = df2[\"Age\"].astype(np.int8)\n\ndf2.head()\n",
-   "execution_count": null,
+   "execution_count": 18,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 2,
+     "execution_count": 18,
      "data": {
       "application/vnd.deepnote.dataframe.v3+json": {
        "column_count": 12,
@@ -773,13 +774,13 @@
     "cell_id": "00002-0ede5da2-e441-4489-9425-a57b7eda8e81",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "e3e0e558",
-    "execution_start": 1648492590340,
-    "execution_millis": 14,
+    "execution_start": 1649435057480,
+    "execution_millis": 13,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 343.5
+    "deepnote_cell_height": 325.5
    },
-   "source": "print(pd.unique(df2[\"Num_family\"]))\nprint(pd.unique(df2[\"Account_length\"]))\nprint(pd.unique(df2[\"Education_type\"]))\nprint(pd.unique(df2[\"Income_type\"]))\nprint(pd.unique(df2[\"Family_status\"]))\n",
-   "execution_count": null,
+   "source": "print(pd.unique(df2[\"Num_family\"]))\nprint(pd.unique(df2[\"Account_length\"]))\nprint(pd.unique(df2[\"Education_type\"]))\nprint(pd.unique(df2[\"Income_type\"]))\nprint(pd.unique(df2[\"Family_status\"]))",
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -795,13 +796,13 @@
     "cell_id": "00003-328ca7bd-9d85-4961-baf7-f6d4a223aa00",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f99b5d0c",
-    "execution_start": 1648492605766,
+    "execution_start": 1649435059631,
     "execution_millis": 4,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 171
    },
    "source": "def discretize_num(x):\n    if x >=thresh:\n      return str(thresh) + \"+\"\n    else:\n      return str(x)\n",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": []
   },
   {
@@ -810,21 +811,21 @@
     "id": "lDQi1J4pHZQ_",
     "cell_id": "00004-d684faed-21ea-4ed2-aca6-78002872cdfe",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "3f8d3536",
-    "execution_start": 1648492607713,
-    "execution_millis": 24,
+    "source_hash": "cf1d596d",
+    "execution_start": 1649435151840,
+    "execution_millis": 21,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 190.1875,
+    "deepnote_cell_height": 208.1875,
     "deepnote_output_heights": [
      21.1875
     ]
    },
-   "source": "thresh = 4\ndf3[\"Num_family\"] = df2[\"Num_family\"].apply(discretize_num)\n\nnp.unique(df3[\"Num_family\"], return_counts=True)\n",
-   "execution_count": null,
+   "source": "thresh = 4\n\ndf3 = df2.copy()\ndf3[\"Num_family\"] = df2[\"Num_family\"].apply(discretize_num)\n\nnp.unique(df3[\"Num_family\"], return_counts=True)",
+   "execution_count": 22,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 7,
+     "execution_count": 22,
      "data": {
       "text/plain": "(array(['1', '2', '3', '4+'], dtype=object), array([1947, 5183, 1635,  944]))"
      },
@@ -844,8 +845,8 @@
     "cell_id": "00005-71861b7e-bc8d-4e56-9462-af8b91958661",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "e354e70f",
-    "execution_start": 1648492609774,
-    "execution_millis": 2244,
+    "execution_start": 1649435155814,
+    "execution_millis": 528,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 451.1875,
     "deepnote_output_heights": [
@@ -854,11 +855,11 @@
     ]
    },
    "source": "np.unique(df3[\"Age\"], return_counts=True)\ndf2.hist(\"Age\", bins=100)\n# >30, 30-39, 40-49, 50-59, >=60",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 8,
+     "execution_count": 23,
      "data": {
       "text/plain": "array([[<AxesSubplot:title={'center':'Age'}>]], dtype=object)"
      },
@@ -890,21 +891,21 @@
     "outputId": "f0e05aa5-dfb9-4c9a-c370-38ff7c4487d3",
     "cell_id": "00006-c6f21d7e-86b4-400c-b213-272e596ad426",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "97201c3d",
-    "execution_start": 1648492611809,
-    "execution_millis": 210,
+    "source_hash": "742ba6d0",
+    "execution_start": 1649435161312,
+    "execution_millis": 84,
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 389.375,
+    "deepnote_cell_height": 371.375,
     "deepnote_output_heights": [
      40.375
     ]
    },
-   "source": "def discretize_age(x):\n  if x<30:\n    return \"<30\"\n  elif x<40:\n    return \"30-39\"\n  elif x<50:\n    return \"40-49\"\n  elif x<60:\n    return \"50-59\"\n  else:\n    return \"60>=\"  \n\ndf3[\"Age\"] = df2[\"Age\"].apply(discretize_age)\nnp.unique(df3[\"Age\"], return_counts=True)\n",
-   "execution_count": null,
+   "source": "def discretize_age(x):\n  if x<30:\n    return \"<30\"\n  elif x<40:\n    return \"30-39\"\n  elif x<50:\n    return \"40-49\"\n  elif x<60:\n    return \"50-59\"\n  else:\n    return \"60>=\"  \n\ndf3[\"Age\"] = df2[\"Age\"].apply(discretize_age)\nnp.unique(df3[\"Age\"], return_counts=True)",
+   "execution_count": 24,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 9,
+     "execution_count": 24,
      "data": {
       "text/plain": "(array(['30-39', '40-49', '50-59', '60>=', '<30'], dtype=object),\n array([2724, 2445, 2169, 1021, 1350]))"
      },
@@ -924,8 +925,8 @@
     "cell_id": "00007-669ea30e-3e77-4da4-8419-e6c7aa935bfe",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "f4efc6dd",
-    "execution_start": 1648492619968,
-    "execution_millis": 526,
+    "execution_start": 1649435163902,
+    "execution_millis": 500,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 755.1875,
     "deepnote_output_heights": [
@@ -934,11 +935,11 @@
     ]
    },
    "source": "df3.hist(\"Total_income\", bins=75, figsize=(10,10))",
-   "execution_count": null,
+   "execution_count": 25,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 10,
+     "execution_count": 25,
      "data": {
       "text/plain": "array([[<AxesSubplot:title={'center':'Total_income'}>]], dtype=object)"
      },
@@ -967,7 +968,7 @@
     "cell_id": "798a5472cd4849a5bbdc58daea2a570c",
     "tags": [],
     "deepnote_cell_type": "markdown",
-    "deepnote_cell_height": 104.390625
+    "deepnote_cell_height": 52.390625
    }
   },
   {
@@ -980,23 +981,24 @@
     "outputId": "240e07c4-367a-4cba-b8fe-4bf7a3dc151e",
     "cell_id": "00008-9726c453-d15a-49b2-9aa7-cbdbf2012fe2",
     "deepnote_to_be_reexecuted": false,
-    "source_hash": "9597d8c0",
-    "execution_start": 1648492627500,
-    "execution_millis": 116,
+    "source_hash": "ae0d22af",
+    "execution_start": 1649435167456,
+    "execution_millis": 20,
+    "owner_user_id": "14885735-5940-40fe-a39a-7ab7fac88e2b",
     "deepnote_cell_type": "code",
-    "deepnote_cell_height": 334.1875,
+    "deepnote_cell_height": 136.1875,
     "deepnote_output_heights": [
      21.1875
     ]
    },
-   "source": "#df3.hist(\"Total_income\", bins=75, figsize=(10,10))\n#134997 - > 192600\ndef discretize_income(x):\n  if x < 134997:\n    return \"low\"\n  elif x < 192600:\n    return \"medium\"\n  else:\n    return \"high\"\n\ndf3[\"Total_income\"] = df2[\"Total_income\"].apply(discretize_income)\nnp.unique(df3[\"Total_income\"], return_counts=True)\n",
-   "execution_count": null,
+   "source": "df3[\"Total_income\"] =  pd.qcut(df2['Total_income'], 3, labels=[\"low\", \"medium\", \"high\"])\nnp.unique(df3[\"Total_income\"], return_counts=True)",
+   "execution_count": 26,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 11,
+     "execution_count": 26,
      "data": {
-      "text/plain": "(array(['high', 'low', 'medium'], dtype=object), array([3393, 2939, 3377]))"
+      "text/plain": "(array(['high', 'low', 'medium'], dtype=object), array([2777, 4078, 2854]))"
      },
      "metadata": {}
     }
@@ -1014,8 +1016,8 @@
     "cell_id": "00009-733b99ad-4386-4fa9-be23-fe47c6e062fa",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "8f61b129",
-    "execution_start": 1648492629472,
-    "execution_millis": 692,
+    "execution_start": 1649435169204,
+    "execution_millis": 556,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 760.1875,
     "deepnote_output_heights": [
@@ -1024,11 +1026,11 @@
     ]
    },
    "source": "df3.hist(\"Account_length\", bins=75, figsize=(20,20))",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 12,
+     "execution_count": 27,
      "data": {
       "text/plain": "array([[<AxesSubplot:title={'center':'Account_length'}>]], dtype=object)"
      },
@@ -1061,8 +1063,8 @@
     "cell_id": "00010-87a348c9-1974-4749-b159-ea7186f6627f",
     "deepnote_to_be_reexecuted": false,
     "source_hash": "51a38312",
-    "execution_start": 1648492633154,
-    "execution_millis": 1,
+    "execution_start": 1649435171851,
+    "execution_millis": 209,
     "deepnote_cell_type": "code",
     "deepnote_cell_height": 335.375,
     "deepnote_output_heights": [
@@ -1070,17 +1072,39 @@
     ]
    },
    "source": "def discretize_al(x):\n  if x < 12:\n    return \"<1y\"\n  elif x < 24:\n    return \"1y-2y\"\n  elif x<36:\n    return \"2y-3y\"\n  else:\n    return \"3y+\"\n\ndf3[\"Account_length\"] = df2[\"Account_length\"].apply(discretize_al)\nnp.unique(df3[\"Account_length\"], return_counts=True)",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [
     {
      "output_type": "execute_result",
-     "execution_count": 13,
+     "execution_count": 28,
      "data": {
       "text/plain": "(array(['1y-2y', '2y-3y', '3y+', '<1y'], dtype=object),\n array([2321, 1943, 3306, 2139]))"
      },
      "metadata": {}
     }
    ]
+  },
+  {
+   "cell_type": "code",
+   "source": "df3[\"Gender\"]       = df3[\"Gender\"].astype(str)\ndf3[\"Own_car\"]      = df3[\"Own_car\"].astype(str)\ndf3[\"Own_property\"] = df3[\"Own_property\"].astype(str)\ndf3[\"Unemployed\"]   = df3[\"Unemployed\"].astype(str)\ndf3[\"Target\"]       = df3[\"Target\"].astype(str)\n\ndataType = df3.dtypes\nprint(dataType)",
+   "metadata": {
+    "cell_id": "9e3932d58b3f4c82b86ac512d2dfc2c8",
+    "tags": [],
+    "deepnote_to_be_reexecuted": false,
+    "source_hash": "69d21e7e",
+    "execution_start": 1649435348291,
+    "execution_millis": 27,
+    "deepnote_cell_type": "code",
+    "deepnote_cell_height": 480.4375
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": "Gender              object\nOwn_car             object\nOwn_property        object\nUnemployed          object\nNum_family          object\nAccount_length      object\nTotal_income      category\nAge                 object\nIncome_type         object\nEducation_type      object\nFamily_status       object\nTarget              object\ndtype: object\n",
+     "output_type": "stream"
+    }
+   ],
+   "execution_count": 31
   },
   {
    "cell_type": "code",
